--- a/groundwater/templates/AnalyticalModel/hamModelSingle.html
+++ b/groundwater/templates/AnalyticalModel/hamModelSingle.html
@@ -34,8 +34,13 @@
                         <input type="number" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8">
                     </div>
                     <br><br>
+                     <div class="form-group">
+                        4.Gamma (g) : <label class="sr-only">Stoichiometric</label>
+                        <input type="number" class="form-control" name="Stoichiometric" id="Stoichiometric" placeholder="a" required min=0 step="any" value="3.5">
+                    </div>
+                    <br><br>
                     <div class="form-group">
-                        4.Electron Donor (Cd) : <label class="sr-only">Donor</label>
+                        5.Electron Donor (Cd) : <label class="sr-only">Donor</label>
                         <input type="number" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5">
                     </div>
                     <br><br>
