Correct slider error in BioSingle

--- a/groundwater/templates/AnalyticalModel/BioSingle.html
+++ b/groundwater/templates/AnalyticalModel/BioSingle.html
@@ -99,27 +99,27 @@
                 <div class="grid-container">
                     <div id="sliderTop" class="slidecontainer" style="display: none">
                     <label> Top of Source located at </label>
-                    <input type="range" min="0" max="50" value="4" step="any" class="slider" id='scatterplot_fits'>
+                    <input type="range" min="0" max="50" value="4" step="1" class="slider" id='scatterplot_fits'>
                     <p>Value: <span id="thicknessVal"></span></p>
                     </div>
                     <div id="sliderConcentration" class="slidecontainer" style="display: none">
                     <label> Concentration </label>
-                    <input type="range" min="0" max="1000" value="1" step="any" class="slider" id='parameters'>
+                    <input type="range" min="0" max="1000" value="1" step="1" class="slider" id='parameters'>
                     <p>Value: <span id="dispersivityVal"></span></p>
                     </div>
                     <div id="sliderLongitudinal" class="slidecontainer" style="display: none">
                     <label> Longitudinal Dispersivity </label>
-                    <input type="range" min="1" max="100" value="10" step="any" class="slider" id='parameters2'>
-                    <p>Value: <span id=longitudinalVal"></span></p>
+                    <input type="range" min="1" max="100" value="10" step="1" class="slider" id='parameters2'>
+                    <p>Value: <span id="longitudinalVal"></span></p>
                     </div>
                     <div id="sliderWidth" class="slidecontainer" style="display: none">
                     <label> Width </label>
-                    <input type="range" min="0" max="1000" value="20" step="any" class="slider" id='parameters3'>
+                    <input type="range" min="0" max="1000" value="20" step="1" class="slider" id='parameters3'>
                     <p>Value: <span id="widthVal"></span></p>
                     </div>
                     <div id="sliderLa" class="slidecontainer" style="display: none">
                     <label> La </label>
-                    <input type="range" min="0" max="1" value="0.1" step="any" class="slider" id='parameters4'>
+                    <input type="range" min="0" max="1" value="0.1" step="0.001" class="slider" id='parameters4'>
                     <p>Value: <span id="laVal"></span></p>
                     </div>
                 </div>
