Added new image of Birla 2020

--- a/groundwater/templates/EmpiricalModel/BirlaEtAlSingle.html
+++ b/groundwater/templates/EmpiricalModel/BirlaEtAlSingle.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-lg-5 col-sm-5 col-xs-5">
                 <h2>Birla et al.(2020)</h2>
-                <img src="static/birla2.png">
+                <img src="static/birla2020.jpeg">
                 <br>
                 <form class="form-inline" action="/BirlaEtAlSinglePlot" method="POST">
                     <div class="form-group">
