--- a/groundwater/templates/baseLayoutSinglePlots.html
+++ b/groundwater/templates/baseLayoutSinglePlots.html
@@ -68,6 +68,10 @@
     .slidecontainer {
       padding:inherit;
     }
+    img{
+	  margin-top:15px;
+	  margin-bottom:15px;
+	}
     </style>
 </head>
 <body>
