--- a/groundwater/templates/EmpiricalModel/BirlaEtAlModelMultiple.html
+++ b/groundwater/templates/EmpiricalModel/BirlaEtAlModelMultiple.html
@@ -13,7 +13,7 @@
 {% endblock %}
 <div class="row">
     {% block h2 %}Birla et al.(2020){% endblock %}
-    {% block img %}<img src="static/birlaEtAl2019.jpeg" width="500">{% endblock %}
+    {% block img %}<img src="static/birla2020.jpeg" style="zoom:50%;">{% endblock %}
     {% block href%}<a href="static/BirlaEtAl(2019).csv" download><button type="button" class="btn btn-light">Download Sample File</button></a>{%endblock%}
             {% block content %}
     {% block body %}
