--- a/groundwater/templates/baseLayoutMultiplePlots.html
+++ b/groundwater/templates/baseLayoutMultiplePlots.html
@@ -65,6 +65,10 @@
           background-color: #993366;
           padding: 17px 10px;
         }
+	img{
+	  margin-top:15px;
+	  margin-bottom:15px;
+	}
     </style>
 </head>
 <body>
