--- a/groundwater/templates/DatabaseManagement/database.html
+++ b/groundwater/templates/DatabaseManagement/database.html
@@ -101,7 +101,16 @@
             </div>
         </div>
         </li>
-        <li><a href="{{ url_for('numericalModel')}}">Numerical Model</a></li>
+        <li><div class="dropdownNew">
+          <button class="dropbtnNew">Numerical Model
+              <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-contentNew">
+            <a href="{{ url_for('documentationNumerical')}}">Model Description</a>
+            <a href="{{ url_for('numericalModel')}}">Single Computing Simulation</a>
+          </div>
+      </div>
+      </li>
         <li><a class="pull-right" href="{{ url_for('logout')}}">Logout</a></li>
     </ul>
   </nav>
