--- a/groundwater/templates/baseLayoutDocumentation.html
+++ b/groundwater/templates/baseLayoutDocumentation.html
@@ -108,7 +108,16 @@
         </div>
         </li>
         <li>{% block liEmpirical %}{% endblock %}</li>
-        <li><a href="{{ url_for('numericalModel')}}">Numerical Model</a></li>
+        <li><div class="dropdownNew">
+            <button class="dropbtnNew">Numerical Model
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-contentNew">
+              <a href="{{ url_for('documentationNumerical')}}">Model Description</a>
+              <a href="{{ url_for('numericalModel')}}">Single Computing Simulation</a>
+            </div>
+        </div>
+        </li>
         {% if current_user.is_authenticated %}
         <li><a class="pull-right" href="{{ url_for('logout')}}">Logout</a></li>
         {% else %}
