--- a/groundwater/templates/AnalyticalModel/documentationLiedl.html
+++ b/groundwater/templates/AnalyticalModel/documentationLiedl.html
@@ -29,6 +29,7 @@ $C_{EA}^\circ$ = Partner Reactant (Electron Acceptor) concentration [ML$^{-1}$]<
 <li>A single step bi-molecular instantaneous reaction between reactants taking place only at the fringe.</li>
 <li>The contaminant source (Electron Donor) penetrates entire thickness of the aquifer.</li>
 </ol>
+<p>The <a href="https://prabhasyadav.github.io/CASTbook/contents/toolbox/an_model/liedl2005.html" target="_blank" rel='noopener noreferrer'><strong>CAST documentation</strong></a> provides more details of this model and its implementation in CAST.
 <p><strong>Reference:</strong></p>
 <p>Liedl, R., Valocchi, A., Dietrich, P., Grathwohl, P., 2005. Finiteness of steady state plumes. Water Resour. Res. 41, W12501. <a href="https://doi.org/10.1029/2005WR004000">https://doi.org/10.1029/2005WR004000</a></p>
 {% endblock %}
