--- a/groundwater/templates/IndexDocumentation/credits.html
+++ b/groundwater/templates/IndexDocumentation/credits.html
@@ -12,54 +12,81 @@
 <p>The codes on this site are licensed under Creative Commons CC BY-SA 4.0. Please check license.md for license wordings.<br />
 <div class="images"><img src="/static/cc.png" alt="Smiley face"  width="150" height="150"></div>
 <div class="space">
-    <p>The following organizations are supporting the development:</p>
-</div>
-<ol type="1">
-<li>Department of Civil Engineering, Indian Institute of Technology Delhi (IITD), Delhi, India</li>
+<p><strong>CAST</strong> codes are hosted in <strong>Github</strong>, and the entire source-code can be obtained from <a href="https://github.com/CAST-IIT/CAST">here</a>.</p>
+<h4 id="cite-cast">Cite CAST</h4>
+<p>CAST is an open-source project and therefore many have contributed with different aspects of its development. The order in which <strong>names</strong> are mentioned below do not follow any contribution level order.</p>
+<h4 id="publication">Publication</h4>
+<ol>
+<li>
+<p>Yadav, P. K., Birla, S., Baliga, V., Liedl, R. Chahar, B. R., and Werth, C., Contamination Assessment and Site-management Tool (CAST) - A browser-based tool for site assessment, Groundwater (in revision) <br><br></p>
+</li>
+<li>
+<p>Birla, S., Baliga, V., Yadav, P. K., Soni, V., Liedl, R., and Chahar, B. R.,  A browser-based user interface for the estimation of steady state plume lengths. FHDGG- 2020 Conference.</p>
+</li>
 </ol>
-<div class="images"><img src="/static/IITD.png" border="0" alt="www.iitd.ac.in" width="100" height="100"></div>
-<div class="space">
-<ul>
-<li>Web-site hosting at: http://www.iitd.ac.in/</li>
-<li>Funding through :</li>
- </ul>
- <ol>
-     <li>Professional Development Fund of Prof B R Chahar</li>
-     <li>Ministry of Water Resources, Govt of India</li>
-     </ol>
 </div>
-<ol start="2" type="1">
-<li>Institute for Groundwater Management, Technical University of Dresden (TUD), Dresden, Germany</li>
+<!-- <div class="space"> --><br>
+<h4><strong>Core code development (up to version v0.2)</strong></h4>
+    <ol>
+    <li>Dr. P. K Yadav (TUD)<sup>1,3</sup></li>
+    <li>Ms. V. Baliga (MUJ)<sup>2</sup></li>
+    <li>Mr. A. Köhler (TUD)<sup>1</sup></li>
+    <li>Mr. A. Kumar(from NIT Trichy, India.)<sup>1</sup></li>
+    <li>Prof. R. Liedl (TUD)<sup>3</sup></li>
+    </ol>
+<!-- </div> -->
+<p><sup>1</sup>Code contributor, <sup>2</sup>Technical lead, full stack development and deployment(at IITD),<sup>3</sup> Conceptualization</p>
+<h4><strong>Supervision, evaluation and support</strong></h4>
+<ol>
+<li>Prof. B. R. Chahar (IITD)</li>
+<li>Prof. R. Liedl (TUD)</li>
+<li>Prof. C. Werth (UT-Austin)</li>
+<li>Ms.   S. Birla (IITD)</li>
+<li>Ms.   I. Wani (IITD)</li>
 </ol>
-<div class="images"><img src="/static/tud_logo_og.png" width="250" height="250"></div>
-<div class="space">
-    <ul><li><p>Partially through DFG fund (LI 727/29-1)<img align="left" src="/static/DFG.png" width="80"></p></li></ul>
-</div>
-<ol start="3" type="1">
-<li>Department of Civil Engineering and Information Technology, Manipal University Jaipur (MUJ), Jaipur, India</li>
+<h4><strong>Documentation</strong></h4>
+<ol>
+<li>Dr. P. K. Yadav (TUD)</li>
+<li>Mr. K. Aryal (TUD)</li>
+<li>Mr. A. Köhler (TUD)</li>
+<li>Ms. V. Baliga (MUJ/IITD)</li>
+<li>Ms. I. Wani (IITD)</li>
 </ol>
-<div class="images"><img src="/static/muj-logo-updated.png" border="0" alt="https://jaipur.manipal.edu/" width="300" height="300"></div>
+<h4><strong>Online Deployment</strong></h4>
+<ol>
+<li>Ms. V. Baliga (MUJ/IITD)</li>
+</ol>
 <br>
-<div class="space">
-<p><strong>Team members for the development</strong> (not in any order):</p>
-<ol type="1">
-<li>Prof. B. R. Chahar <sup>1</sup></li>
-<li>Prof. R. Liedl <sup>2</sup></li>
-<li>Ms. Vedaanti Baliga <sup>1, </sup><sup>4, </sup><sup>+</sup></li>
-<li>Dr. Prabhas K Yadav <sup>2, </sup><sup>3, </sup> <sup>++</sup></li>
-<li>Ms. Sandhya Birla <sup>1</sup></li>
-<li>Mr. Anton Köhler <sup>2, </sup><sup>+*</sup></li>
-<li>Mr. Shamsuddin Daulat <sup>2, </sup><sup>**</sup></li>
-<li>Mr. Aditya Kumar(from NIT Trichy, India.)</li>
-</ol>
-</div>
-<p><sup>+</sup><em>Technical lead, full stack development and deployment(at IITD),</em> <sup>++</sup><em>Concept development and coding,</em> <sup>+*</sup><em>Numerical model interface and code development,</em> <sup>**</sup><em>Decison model and code development</em></p>
-<p><strong>Deployment of application at IIT :</strong></p>
-<ul>
-    <li>This application has its storage on <a href="https://baadal.iitd.ac.in/baadal">Baadal</a>, which is a cloud orchestration and virtualization management software developed at IITD</li>
-    <li>It has been deployed on an Ubuntu 18.04 server with 2CPU, 4GB RAM and 80GB HDD</li>
-</ul>
-<p><strong>For citing:</strong></p>
-<p>Coming soon …,</p>
-<h3 id="more-to-be-continued">More to be continued…</h3>
+    <h4><strong>Funding support</strong></h4>
+<ol>
+    <li>Partially through <a href="www.dfg.de">German Research Foundation</a> fund (LI 727/29-1, Prof. R. Liedl) at <a href="www.tu-dresden.de">Technische Universität Dresden, TUD</a></li>
+    </ol>
+    <p style="text-align:center;">
+      <img src="/static/DFG.png" alt="DFG" style="zoom:60%;"/>
+    </p>
+    <p style="text-align:center;">
+      <img src="/static/tud_logo_og.png" alt="TUD" style="zoom:60%;" />
+    </p>
+    <ol start="2">
+    <li>
+    <p>Personnel (partial) support through (Prof. B. R. Chahar)
+    <a href="https://www.education.gov.in/en">Ministry of Human Resources Development, Government of India</a>.</p>
+    </li>
+    <li>
+    <p>Server support:
+    <a href="www.iitd.ac.in">Indian Institute of Technology Delhi</a></p>
+    </li>
+    </ol>
+    <p style="text-align:center;">
+      <img src="/static/IITD.png" alt="IITD" style="zoom:40%;"/>
+    </p>
+    <ol start="4">
+    <li>
+    <p>Initial personnel support from <a href="https://jaipur.manipal.edu/">Manipal University Jaipur</a></p>
+    <p style="text-align:center;">
+    </li>
+    </ol>
+      <img src="/static/muj-logo-updated.png" alt="MUJ" style="zoom:35%;" />
+    </p>
+    <br>
 {% endblock %}
