typo and formats changes in html and py files

--- a/groundwater/templates/AnalyticalModel/liedl3DModelSingle.html
+++ b/groundwater/templates/AnalyticalModel/liedl3DModelSingle.html
@@ -20,43 +20,43 @@
                 <br>
                 <form class="form-inline" action="/liedl3DSinglePlot" method="POST">
                     <div class="form-group">
-                        1.Source Thickness (M) : <label class="sr-only">Thickness</label>
-                        <input type="number" class="form-control" id="Thickness" name="Thickness" placeholder="M" required  min="0.1" max="15" step="0.001" value="10">
+                        1. Source Thickness $(M)$ : <label class="sr-only">Thickness</label>
+                        <input type="number" class="form-control" id="Thickness" name="Thickness" placeholder="M" required  min="0.1" max="15" step="0.001" value="10"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        2.Vertical Transverse Dispersivity (Tv) : <label class="sr-only">VDispersivity</label>
-                        <input type="number" class="form-control" id="VDispersivity" name="VDispersivity" placeholder="Tv" required min="0.0001" max="1" step="0.0001" value="0.01">
+                        2. Vertical Transverse Dispersivity $(\alpha_{Tv})$ : <label class="sr-only">VDispersivity</label>
+                        <input type="number" class="form-control" id="VDispersivity" name="VDispersivity" placeholder="Tv" required min="0.0001" max="1" step="0.0001" value="0.01"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        3.Source Width : <label class="sr-only">SourceWidth</label>
-                        <input type="number" class="form-control" id="SourceWidth" name="SourceWidth" placeholder="W" required min="0.1" max="10" step="0.001" value="7">
+                        3. Source Width $(W)$ : <label class="sr-only">SourceWidth</label>
+                        <input type="number" class="form-control" id="SourceWidth" name="SourceWidth" placeholder="W" required min="0.1" max="10" step="0.001" value="7"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        4.Horizontal Transverse Dispersivity (Th) : <label class="sr-only">Dispersivity</label>
-                        <input type="number" class="form-control" id="Dispersivity" name="Dispersivity" placeholder="Th" required min="0.0001" max="1" step="0.0001" value="0.01">
+                        4. Horizontal Transverse Dispersivity $(\alpha_{Th})$ : <label class="sr-only">Dispersivity</label>
+                        <input type="number" class="form-control" id="Dispersivity" name="Dispersivity" placeholder="Th" required min="0.0001" max="1" step="0.0001" value="0.01"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        5.Stoichiometric Ratio (Gamma) : <label class="sr-only">Stoichiometric</label>
+                        5. Stoichiometric Ratio $(\gamma)$ : <label class="sr-only">Stoichiometric</label>
                         <input type="number" class="form-control" id="Stoichiometric" name="Stoichiometric" placeholder="Gamma" required min=0 step="any" value="3">
                     </div>
                     <br><br>
                     <div class="form-group">
-                        6.Electron Acceptor (Ca) : <label class="sr-only">Acceptor</label>
-                        <input type="number" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8">
+                        6. Electron Acceptor $(C_{EA}^°)$ : <label class="sr-only">Acceptor</label>
+                        <input type="number" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        7.Electron Donor (Cd) : <label class="sr-only">Donor</label>
-                        <input type="number" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5">
+                        7. Electron Donor $(C_{ED}^°)$ : <label class="sr-only">Donor</label>
+                        <input type="number" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        8.Threshold Contaminant Concentration (Ct) : <label class="sr-only">Threshold</label>
-                        <input type="number" class="form-control" id="Threshold" name="Threshold" placeholder="Ct" required min=0 step="any" value="0.5">
+                        8. Threshold Contaminant Concentration $(C_{Thres})$ : <label class="sr-only">Threshold</label>
+                        <input type="number" class="form-control" id="Threshold" name="Threshold" placeholder="Ct" required min=0 step="any" value="0.5"> mg/L
                     </div>
                     <br><br>
                 <div>
