--- a/groundwater/templates/AnalyticalModel/liedlModelSingle.html
+++ b/groundwater/templates/AnalyticalModel/liedlModelSingle.html
@@ -20,27 +20,27 @@
                 <br>
                 <form class="form-inline" action="/random-name/" method="POST">
                     <div class="form-group">
-                        1.Thickness ($M$) :<label class="sr-only">Thickness</label>
+                        1. Thickness $(M)$ :<label class="sr-only">Thickness</label>
                         <input type="number" value="2" class="form-control" id="Thickness" name="Thickness" placeholder="M" required min="0.1" max="6.1" step="0.001"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        2.Dispersivity ($\alpha_{Tv}$) :<label class="sr-only">Dispersivity</label>
+                        2. Dispersivity $(\alpha_{Tv})$ :<label class="sr-only">Dispersivity</label>
                         <input type="number" class="form-control" id="Dispersivity" name="Dispersivity" placeholder="TV" required min="0.0001" max="0.01" step="0.0001" value="0.001"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        3.Stoichiometric Ratio ($\gamma$ ) : <label class="sr-only">Stoichiometric</label>
+                        3. Stoichiometric Ratio $(\gamma)$ : <label class="sr-only">Stoichiometric</label>
                         <input type="number" class="form-control" id="Stoichiometric" name="Stoichiometric" placeholder="Alpha" required min=0 step="any" value="3.5"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        4.Electron Acceptor ($C_{EA}^\circ$) : <label class="sr-only">Acceptor</label>
+                        4. Electron Acceptor $(C_{EA}^\circ)$ : <label class="sr-only">Acceptor</label>
                         <input type="number" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8"> mg/l
                     </div>
                     <br><br>
                     <div class="form-group">
-                        5.Electron Donor ($C_{ED}^\circ$) : <label class="sr-only">Donor</label>
+                        5. Electron Donor $(C_{ED}^\circ)$ : <label class="sr-only">Donor</label>
                         <input type="number" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5"> mg/l
                     </div>
                     <br><br>
