--- a/groundwater/templates/AnalyticalModel/BioSingle.html
+++ b/groundwater/templates/AnalyticalModel/BioSingle.html
@@ -15,77 +15,77 @@
     <div class="graph">
         <div class="row">
             <div class="col-lg-5 col-sm-5 col-xs-5">
-                <h2>BioScreen</h2>
+                <h2>BIOSCREEN-AT</h2>
                 <img src="static/bio.png">
                 <br>
                 <form class="form-inline" action="/BioSinglePlot" method="POST">
                     <div class="form-group">
-                        1.Threshold Concentration (Cthres) :<label class="sr-only">Threshold Concentration</label>
-                        <input type="number" class="form-control" id="Threshold_Concentration" name="Threshold_Concentration" placeholder="Chres" required min=0  step="any" value="5e-5">
+                        1. Threshold Concentration $(C_{Thres})$ :<label class="sr-only">Threshold Concentration</label> 
+                        <input type="number" class="form-control" id="Threshold_Concentration" name="Threshold_Concentration" placeholder="Chres" required min=0  step="any" value="5e-5"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        2.Time (t) : <label class="sr-only">Time</label>
-                        <input type="number" class="form-control" name="Time" id="Time" placeholder="t" required min=0 step="any" value="20" max="1000">
+                        2. Time $(t)$ : <label class="sr-only">Time</label> 
+                        <input type="number" class="form-control" name="Time" id="Time" placeholder="t" required min=0 step="any" value="20" max="1000"> y
                     </div>
                     <br><br>
                     <div class="form-group">
-                        3.Source Thickness (H): <label class="sr-only">Top Source</label>
-                        <input type="number" class="form-control" name="Top_Of_Source" id="Top_Of_Source" placeholder="z_2" required min="0" max="50" step="0.001" value="6.1">
+                        3. Source Thickness $(H)$: <label class="sr-only">Top Source</label>
+                        <input type="number" class="form-control" name="Top_Of_Source" id="Top_Of_Source" placeholder="z_2" required min="0" max="50" step="0.001" value="6.1"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        4.Source Concentration (c0) : <label class="sr-only">Concentration</label>
-                        <input type="number" class="form-control" name="Input_Concentration" id="Input_Concentration" placeholder="Co" required min="0" max="1000" step="0.001" value="106.35">
+                        4. Source Concentration $(C^°)$ : <label class="sr-only">Concentration</label>
+                        <input type="number" class="form-control" name="Input_Concentration" id="Input_Concentration" placeholder="Co" required min="0" max="1000" step="0.001" value="106.35"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        5.Source Width (W) : <label class="sr-only">Width</label>
-                        <input type="number" class="form-control" name="Width" id="Width" placeholder="W" required min="0" max="1000" step="0.001" value="20">
+                        5. Source Width $(W)$ : <label class="sr-only">Width</label>
+                        <input type="number" class="form-control" name="Width" id="Width" placeholder="W" required min="0" max="1000" step="0.001" value="20"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        6.Average Linear Groundwater Velocity (v): <label class="sr-only">Velocity</label>
-                        <input type="number" class="form-control" name="Velocity" id="Velocity" placeholder="v" required min=10 max=1000  step="any" value="292">
+                        6. Average Linear Groundwater Velocity $(v)$ : <label class="sr-only">Velocity</label>
+                        <input type="number" class="form-control" name="Velocity" id="Velocity" placeholder="v" required min=10 max=1000  step="any" value="292"> m/y
                     </div>
                     <br><br>
                     <div class="form-group">
-                        7.Longitudinal Dispersivity (αx) : <label class="sr-only">Longitudinal Dispersivity</label>
-                        <input type="number" class="form-control" name="Longitudinal" id="Longitudinal" placeholder="al_x" required min="1" max="100" step="0.001" value="10.7">
+                        7. Longitudinal Dispersivity $(\alpha_L)$ : <label class="sr-only">Longitudinal Dispersivity</label>
+                        <input type="number" class="form-control" name="Longitudinal" id="Longitudinal" placeholder="al_x" required min="1" max="100" step="0.001" value="10.7"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        8.Horizontal Transverse Dispersivity (αy) : <label class="sr-only">Horizontal Dispersivity</label>
-                        <input type="number" class="form-control" name="Horizontal" id="Horizontal" placeholder="al_y" required min=0.1 max="10" step="any" value="1.1">
+                        8. Horizontal Transverse Dispersivity $(\alpha_{Th})$ : <label class="sr-only">Horizontal Dispersivity</label>
+                        <input type="number" class="form-control" name="Horizontal" id="Horizontal" placeholder="al_y" required min=0.1 max="10" step="any" value="1.1"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        9.Vertical Transverse Dispersivity (αz) : <label class="sr-only">Vertical Dispersivity</label>
-                        <input type="number" class="form-control" name="Vertical" id="Vertical" placeholder="al_z" required min=0.01 max="1" step="any" value="0.11">
+                        9. Vertical Transverse Dispersivity $(\alpha_{Tv})$ : <label class="sr-only">Vertical Dispersivity</label>
+                        <input type="number" class="form-control" name="Vertical" id="Vertical" placeholder="al_z" required min=0.01 max="1" step="any" value="0.11"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        10.Effective Diffusion Coefficient (Df) : <label class="sr-only">Diffusion</label>
+                        10. Effective Diffusion Coefficient $(D_f)$ : <label class="sr-only">Diffusion</label>
                         <input type="number" class="form-control" name="Diffusion" id="Diffusion" placeholder="Df" required min=0 max="0.1" step="any" value="0">
                     </div>
                     <br><br>
                      <div class="form-group">
-                        11.Retardation Factor (R) : <label class="sr-only">R</label>
+                        11. Retardation Factor $(R)$ : <label class="sr-only">R</label>
                         <input type="number" class="form-control" name="R" id="R" placeholder="R" required min=0 step="any" value="1">
                     </div>
                     <br><br>
                      <div class="form-group">
-                        12.Source Decay Coefficient (γ) : <label class="sr-only">Ga</label>
+                        12. Source Decay Coefficient $(\gamma)$ : <label class="sr-only">Ga</label>
                         <input type="number" class="form-control" name="Ga" id="Ga" placeholder="Ga" required min=0 max="1" step="any" value="0">
                     </div>
                     <br><br>
                     <div class="form-group">
-                        13.Effective first-order Decay Coefficient (λeff) : <label class="sr-only">La</label>
-                        <input type="number" class="form-control" name="La" id="La" placeholder="La" required min="0" max="1" step="0.001" value="4.45e-1">
+                        13. Effective first-order Decay Coefficient $(\lambda_{EFF})$ : <label class="sr-only">La</label>
+                        <input type="number" class="form-control" name="La" id="La" placeholder="La" required min="0" max="1" step="0.001" value="4.45e-1"> 1/y
                     </div>
                     <br><br>
                      <div class="form-group">
-                        14.Number of Gauss points : <label class="sr-only">Gauss Points</label>
+                        14. Number of Gauss points : <label class="sr-only">Gauss Points</label>
                         <input type="number" class="form-control" name="M" id="M" placeholder="M" required min=0 step="any" value="60">
                     </div>
                     <br><br>
