--- a/groundwater/templates/AnalyticalModel/chuEtAlSingle.html
+++ b/groundwater/templates/AnalyticalModel/chuEtAlSingle.html
@@ -20,33 +20,33 @@
                 <br>
                 <form class="form-inline" action="/chuEtAlSinglePlot" method="POST">
                     <div class="form-group">
-                        1.Width (W) :<label class="sr-only">Thickness</label>
-                        <input type="number" class="form-control" id="Thickness" name="Thickness" placeholder="M" required min="0.1" max="6" step="0.001" value="2">
+                        1. Width $(W)$ :<label class="sr-only">Thickness</label>
+                        <input type="number" class="form-control" id="Thickness" name="Thickness" placeholder="M" required min="0.1" max="6" step="0.001" value="2"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        2.Transverse Horizontal Dispersivity (Th) : <label class="sr-only">Dispersivity</label>
-                        <input type="number" class="form-control" name="Dispersivity" id="Dispersivity" placeholder="Dz" required min="0.0001" max="0.01" step="0.0001" value="0.01">
+                        2. Transverse Horizontal Dispersivity $(\alpha_{Th}$) : <label class="sr-only">Dispersivity</label>
+                        <input type="number" class="form-control" name="Dispersivity" id="Dispersivity" placeholder="Dz" required min="0.0001" max="0.01" step="0.0001" value="0.01"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        3.Reaction Stoichiometric Ratio (g) : <label class="sr-only">Stoichiometric</label>
+                        3. Reaction Stoichiometric Ratio $(\gamma)$ : <label class="sr-only">Stoichiometric</label>
                         <input type="number" class="form-control" name="Stoichiometric" id="Stoichiometric" placeholder="g" required min=0 step="any" value="1.5">
                     </div>
                     <br><br>
                     <div class="form-group">
-                        4.Electron Acceptor (Ca) : <label class="sr-only">Acceptor</label>
-                        <input type="number" class="form-control" name="Acceptor" id="Acceptor" placeholder="Ca" required min=0 step="any" value="8">
+                        4. Electron Acceptor $(C_{EA}^°)$: <label class="sr-only">Acceptor</label>
+                        <input type="number" class="form-control" name="Acceptor" id="Acceptor" placeholder="Ca" required min=0 step="any" value="8"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        5.Electron Donor (Cd) : <label class="sr-only">Donor</label>
-                        <input type="number" class="form-control" name="Donor" id="Donor" placeholder="Cd" required min=0 step="any" value="5">
+                        5. Electron Donor $(C_{ED}^°)$ : <label class="sr-only">Donor</label>
+                        <input type="number" class="form-control" name="Donor" id="Donor" placeholder="Cd" required min=0 step="any" value="5"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        6.Biological Factor (e) : <label class="sr-only">Epsilon</label>
-                        <input type="number" class="form-control" name="Epsilon" id="Epsilon" placeholder="e" required min=0 step="any" value="0">
+                        6.Biological Factor $(\epsilon)$ : <label class="sr-only">Epsilon</label>
+                        <input type="number" class="form-control" name="Epsilon" id="Epsilon" placeholder="e" required min=0 step="any" value="0"> mg/L
                     </div>
                     <br><br>
                 <div>
