--- a/groundwater/templates/DatabaseManagement/statistics.html
+++ b/groundwater/templates/DatabaseManagement/statistics.html
@@ -20,7 +20,7 @@
                 {{data.to_html(classes="table table-striped table-hover table-responsive") | safe}}
      </div>
      <div class="row">
-        <h2>Statistical Analysis for similar data</h2>
+        <h2>Statistical analysis for similar data</h2>
         <h3>The statistics presented below are representing the site database parameters similar to that of the user's database</h3>
                {{similar_data.to_html(classes="table table-striped table-hover table-responsive") | safe}}
     </div>
