--- a/groundwater/templates/EmpiricalModel/MaierAndGrathwohlSingle.html
+++ b/groundwater/templates/EmpiricalModel/MaierAndGrathwohlSingle.html
@@ -15,33 +15,33 @@
     <div class="graph">
         <div class="row">
             <div class="col-lg-5 col-sm-5 col-xs-5">
-                <h2>Maier and Grathwohl(2005)</h2>
+                <h2>Maier and Grathwohl (2005)</h2>
                 <img src="static/maierGrathwohl2005.png">
                 <br>
                 <form class="form-inline" action="/MaierAndGrathwohlSinglePlot" method="POST">
                     <div class="form-group">
-                        1.Aquifier Thickness (M) : <label class="sr-only">Thickness</label>
-                        <input type="text" class="form-control" id="Thickness" name="Thickness" placeholder="Q" required min="0.1" max="6" step="0.001" value="5">
+                        1. Aquifier Thickness $(M)$ : <label class="sr-only">Thickness</label>
+                        <input type="text" class="form-control" id="Thickness" name="Thickness" placeholder="Q" required min="0.1" max="6" step="0.001" value="5"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        2.Vertical Transverse Dispersivity (Atv) : <label class="sr-only">Dispersivity</label>
-                        <input type="text" class="form-control" id="Dispersivity" name="Dispersivity" placeholder="Atv" required min="0.0001" max="0.01" step="0.0001" value="0.01">
+                        2. Vertical Transverse Dispersivity $(\alpha_{Tv})$ : <label class="sr-only">Dispersivity</label>
+                        <input type="text" class="form-control" id="Dispersivity" name="Dispersivity" placeholder="Atv" required min="0.0001" max="0.01" step="0.0001" value="0.01"> m
                     </div>
                     <br><br>
                     <div class="form-group">
-                        3.Reaction Stoichiometric Ratio (gamma) : <label class="sr-only">Stoichiometric</label>
+                        3. Reaction Stoichiometric Ratio $(\gamma)$ : <label class="sr-only">Stoichiometric</label>
                         <input type="text" class="form-control" id="Stoichiometric" name="Stoichiometric" placeholder="g" required min=0 step="any" value="3.5">
                     </div>
                     <br><br>
                     <div class="form-group">
-                        4.Electron Acceptor (Ca) : <label class="sr-only">Acceptor</label>
-                        <input type="text" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8">
+                        4. Electron Acceptor $(C_{EA}^°)$ : <label class="sr-only">Acceptor</label>
+                        <input type="text" class="form-control" id="Acceptor" name="Acceptor" placeholder="Ca" required min=0 step="any" value="8"> mg/L
                     </div>
                     <br><br>
                     <div class="form-group">
-                        5.Electron Donor (Cd) : <label class="sr-only">Donor</label>
-                        <input type="text" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5">
+                        5. Electron Donor $(C_{ED}^°)$ : <label class="sr-only">Donor</label>
+                        <input type="text" class="form-control" id="Donor" name="Donor" placeholder="Cd" required min=0 step="any" value="5"> mg/L
                     </div>
                     <br><br>
                 <div>
